10-27 | Sprint 2 | Event Logger (Backend) created and implemented
10-29 | Sprint 2 | Finished method and dependency parsing methods
10-30 | Sprint 2 | Finished commenting and formatting the FileParser
10-30 | Sprint 2 | Help button functionality implemented along w/ a help manualform

11-05 | Sprint 3 | Bad Path handled in the Destination text field/label
11-05 | Sprint 3 | Duplicate source file error message handled and implemented properly
11-05 | Sprint 3 | Alert Box formatting and more error capabilities added
11-07 | Sprint 3 | 'Select All' button added to GUI along w/ functionality
11-07 | Sprint 3 | 'Deselect All' button added to GUI along w/ functionality
11-07 | Sprint 3 | Tool Tips for each 'Browse' button added as well as small cosmetic changes on FrontEndGUI
11-10 | Sprint 3 | Formatted the FileParser class to improve communication between components and design pattern
11-11 | Sprint 3 | More 'Generate' button functionality added, Generate window built and button functionality added
11-11 | Sprint 3 | Added Generate makefile functionality
11-12 | Sprint 3 | Fixed bug where path of outputted makefile was fixed

11-15 | Sprint 4 | Built 'Preview' window and only implemented the Makefile functionality aspect
11-16 | Sprint 4 | Added a serialized Preference class that stores user-defined preferences and loads upon every program run
11-17 | Sprint 4 | Build 'Preferences' Window and implemented all functionality including skeletal toggles (stretch goals)
11-17 | Sprint 4 | Added a 'Default' to main GUI that allows the user to load predefined destination paths
11-17 | Sprint 4 | Small cosmetic and design oriented fixes applied to FrontEndGUI and other classes
11-23 | Sprint 4 | Added a 'Test Fixtures Preferences' window that allows user to specify their own preferences for the test fixtures
11-24 | Sprint 4 | Added more functionality to 'Test Fixture Preferences' window to attach csv files to methods for testing