@@ -1,12 +1,10 @@
-Dec 09, 2017 1:32:19 PM sample.Controller <init>
+Dec 09, 2017 1:49:49 PM sample.Controller <init>
 FINEST: Controller object created and initialized
-Dec 09, 2017 1:32:20 PM sample.FrontEndGUI mainWindowDisplay
+Dec 09, 2017 1:49:50 PM sample.FrontEndGUI mainWindowDisplay
 INFO: Front End User Interface built and displayed
-Dec 09, 2017 1:32:20 PM sample.Main start
+Dec 09, 2017 1:49:50 PM sample.Main start
 INFO: Program begins to execute,   Logger Formatted
-Dec 09, 2017 1:32:36 PM sample.FileParser makeDependence
-INFO: Unit test identified, Skipping. We don't go deep.
-Dec 09, 2017 1:32:36 PM sample.FileParser makeDependence
+Dec 09, 2017 1:50:06 PM sample.FileParser makeDependence
 WARNING: Blank file read.
-Dec 09, 2017 1:32:36 PM sample.FileParser makeDependence
-INFO: Unit test identified, Skipping. We don't go deep.
+Dec 09, 2017 1:50:48 PM sample.FileParser generateOutputFiles
+INFO: MakeFile: makefile has been generated.
